statistic + swagger
